--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -5709,7 +5709,7 @@ navbar-menu
 	content: "";
 	height: 200px;
 	width: 200px;
-	background: var(--dark);
+	background: var(--color-optional);
 	transform: skewX(40deg);
 	opacity: 0;
 	transition: all 0.15s ease-in-out;
