--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1,6 +1,6 @@
 /* ----------------------------------
 
-Template Name: Aitech-Groupe - IT Company React - NextJS Template
+Template Name: Aitech-CI - IT Company React - NextJS Template
 Author: validTheme
 Description:
 Version: 1.0
